--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   text-decoration: none;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .max-width{
   max-width: 1300px;
   padding: 10px;
@@ -141,7 +145,7 @@
     padding: 100px 0;
   }
 
-  .about, .tech, .skills, .teams, .contact{
+  .about, .tech, .skills, .teams, .contact, footer{
     font-family: 'poppins', sans-serif;
   }
 
@@ -519,6 +523,86 @@
   color: #1A1A1A;
 }
 
+.contact .right form .fields {
+  display: flex;
+}
+
+.contact .right form .field,
+.contact .right form .fields .field {
+  height: 45px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.contact .right form .textarea{
+  height: 120px;
+  width: 100%;
+}
+
+.contact .right form .name{
+  margin-right: 10px;
+}
+
+.contact .right form .email{
+  margin-left: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: 'poppins', sans-serif;
+}
+
+.contact .right form .textarea textarea{
+  padding: 10px;
+  resize: none;
+}
+
+.contact .right form .button{
+  height: 47px;
+  width: 170px;
+}
+
+.contact .right form .button button{
+  width: 100%;
+  height: 100%;
+  border: 2px solid #c23616;
+  background: #c23616;
+  color: #dcdde1;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.contact .right form .button button:hover{  
+  color: #c23616;
+  background: none;
+}
+
+/* Footer section */
+
+footer{
+  background: #1A1A1A;
+  padding: 20px 23px;
+  color: #dcdde1;
+  text-align: center;
+}
+
+footer span a{
+  color: #c23616;
+}
+
+footer span a:hover{
+  text-decoration: underline;
+}
 
 /* Responsive media */
   @media (max-width: 1300px){
@@ -614,11 +698,13 @@
     margin-bottom: 20px;
   }
 
-  .skills .skills-content .column{
+  .skills .skills-content .column,
+  .contact .contact-content .column{
     width: 100%;
     margin-top: 25px;
   }
 }
+
 
 @media (max-width: 690px){
 
