--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ html{
 }
 
 .navbar .menu li a{
+  display: block;
   color: #dcdde1;
   font-size: 18px;
   font-weight: 500;
@@ -574,7 +575,7 @@ html{
   height: 100%;
   border: 2px solid #c23616;
   background: #c23616;
-  color: #dcdde1;
+  color: #fff;
   font-size: 20px;
   font-weight: 500;
   border-radius: 6px;
